Corrigindo bugs/refatorando RecipeDetails/RecipeProgress e adicionando testes ao componente Profile

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   font-family: Inter , sans-serif;
   margin: 0;
-  outline: none;
+  outline: 1px solid red;
   padding: 0;
 }
 
